--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Training API</title>
-    <link id="icon" rel="icon" href="https://cdn1.iconfinder.com/data/icons/computer-techologies-outline-free/128/ic_league_of_legend_logo-512.png">
+    <link id="icon" rel="icon" href="https://pbs.twimg.com/media/ElhZ-EIWkAAQ_ZL.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <script src='main.js' defer></script>
 </head>
 <body>
 
     <div id="ChampName">        
-        <h1 id='ChampTitle'>  </h1> 
+        <h1 id='title'>  </h1> 
         <hr>
     </div>
     
-    <button class="buttons" onclick="changeAPI()" > <i class="fa fa-refresh" style="font-size:40px;color:rgb(255, 255, 255)"></i></button>
+    <button class="buttons" onclick="request_API_And_ChangeHTML()" > <i class="fa fa-refresh" style="font-size:40px;color:rgb(255, 255, 255)"></i></button>
     <button onclick="OpenMenu()" class="buttons" id="butgear" ><i class="fa fa-gear" style="font-size:40px;color:rgb(255, 255, 255)"></i></button>
 
     <div class="menu" id="menu" style="display: none;">
@@ -36,13 +36,12 @@
     <br>
 
     <label for="APItype">API change: </label>
-    <select onchange="changeAPIAll()" id="APItype" class="select"  name="APItype">
+    <select onchange="request_API_And_ChangeHTML()" id="selectedAPI" class="select"  name="APItype">
 
-    
+        <option value="rick-and-morty">Rick and Morty</option>
+        <option value="art">Museum</option>
         <option value=lol>League of Legend</option>
-        <option value="museum">Museum</option>
-        <option value="rickmorty">Rick and Morty</option>
-        <option value="finalspace">Final Space</option>
+        <option value="final-space">Final Space</option>
         <option value="dota">Dota</option>
         <option value="pokemon">Pokémon</option>
 
