--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <script src='main.js' defer></script>
 </head>
 <body>
-
+    <div id="imageBg">
+    </div>
     <div id="ChampName">        
         <h1 id='title'>  </h1> 
         <hr>
