--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
 </head>
 <body>
     <div id="imageBg">
+        <img id="coverimg"src="" alt="">
     </div>
-    <div id="ChampName">        
-        <h1 id='title'>  </h1> 
-        <hr>
-    </div>
-    
-    <button class="buttons" onclick="changeHTML_to_currentAPI()" > <i class="fa fa-refresh" style="font-size:40px;color:rgb(255, 255, 255)"></i></button>
-    <button onclick="OpenMenu()" class="buttons" id="butgear" ><i class="fa fa-gear" style="font-size:40px;color:rgb(255, 255, 255)"></i></button>
-
+    <div class="mybuttons">
+        <button class="buttons" onclick="changeHTML_to_currentAPI()" > <i class="fa fa-refresh" style="font-size:40px;color:rgb(255, 255, 255)"></i></button>
+        <button onclick="OpenMenu()" class="buttons" id="butgear" ><i class="fa fa-gear" style="font-size:40px;color:rgb(255, 255, 255)"></i></button>
+       
+    </div> 
     <div class="menu" id="menu" style="display: none;">
 
         <h1> Menu</h1>
